--- a/environments/dev/values/argocd.yaml
+++ b/environments/dev/values/argocd.yaml
@@ -1,7 +1,3 @@
-global:
-  image:
-    tag: "v2.11.1"
-
 server:
   extraArgs:
   - --staticassets
@@ -11,7 +7,8 @@ server:
   - /argocd
   - --rootpath
   - /argocd
-
+  service:
+    type: ClusterIP
   env:
   - name: ARGOCD_MAX_CONCURRENT_LOGIN_REQUESTS_COUNT
     value: "0"
